[package]
name = "collier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anchor-lang = "0.17.0"
borsh = "0.9.1"
futures = "0.3.19"
gumdrop = { version = "0.8.0", features = ["default_expr"] }
metaplex-token-metadata = { git = "https://github.com/metaplex-foundation/metaplex" }
rusqlite = "0.26.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
solana-account-decoder = "1.7.11"
solana-client = "1.9.5"
solana-sdk = "1.7.10"
spl-token = "3.2.0"
tokio = { version = "1", features = ["full"] }